--- a/index.html
+++ b/index.html
@@ -22,12 +22,21 @@
   <body>
     <main id="container">
       <section id="img">
-        <img src="/assets/ilustation.svg" alt="" />
+        <img src="/assets/ilustration.svg" alt="" />
       </section>
 
       <section id="calculator">
         <form action="" id="form">
           <h1 id="title">Calculadora - IMC</h1>
+
+          <div class="input-box">
+            <label for="name"> Nome </label>
+            <div class="input-field">
+              <i class="fa-solid fa-user"></i>
+              <input type="text" id="name" required />
+              <span>  </span>
+            </div>
+          </div>
 
           <div class="input-box">
             <label for="weight"> Peso em Kg </label>
@@ -61,7 +70,7 @@
             </div>
 
             <div id="more_info">
-              <a href="https://brasilescola.uol.com.br/saude-na-escola/Indice-massa-corporea-imc.htm">
+              <a href="https://brasilescola.uol.com.br/saude-na-escola/Indice-massa-corporea-imc.htm" target="_blank">
                 Mais informações sobre o IMC
                 <i class="fa-solid fa-up-right-from-square"></i>
               </a>
